<resources>
    <string name="app_name">PiksiDroid</string>
    <string name="action_settings">Settings</string>
    <string name="server_label">Server:</string>
    <string name="server_ip">2148.swiftnav.com</string>
    <string name="server_button">Connect</string>
    <string name="north_text">Large Text</string>
    <string name="east_text">Large Text</string>
    <string name="down_text">Large Text</string>
    <string name="time_of_the_week_text">Large Text</string>
    <string name="n_sats_text">Large Text</string>
    <string name="ff_text">Large Text</string>
</resources>
