<LinearLayout
    android:id="@+id/rtk"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/north_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/east_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/down_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/tow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/time_of_the_week_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/n_sats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/n_sats_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/ff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ff_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="visible"/>
</LinearLayout>
