<LinearLayout
    android:id="@+id/observation"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/server_label"
        />

    <EditText
        android:id="@+id/obs_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="textUri"
        android:text="@string/server_ip"/>

    <Button
        android:id="@+id/obs_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_button"
        />

</LinearLayout>
